# swarm

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: common.h  device.h  xbee.h
src/: common.c  device.c  device_x86.c  main.c  xbee.c
